# ColorsSRE

./: CMakeLists.txt  LICENSE  README.md
include/: instance.h  math_utils.h  objects.h  window.h
include/pipeline/: merger.h  pipeline.h  pipeline_structs.h  vertex_shader.h
src/: data.c  instance.c  main.c  math_utils.c  merger.c  objects.c  pipeline.c  place2.c  primitive_processing.c  rasterizer.c  window.c
